--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,2 +1,7 @@
-<h1>SimplePages#contact</h1>
-<p>Find me in app/views/simple_pages/contact.html.erb</p>
+<h1>Here my Contact Information</h1>
+<ul>
+<li>Moritz Plesser</li>
+<li>Ölmühlweg 37b</li>
+<li>Königstein im Taunus</li>
+<li>015146323555</li>
+</ul>
