--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the simple_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h1 {
+	font-size: 3em;
+	text-align: center;
+	font-family: 'Lato', sans-serif;
+	margin: 50px, 10px;
+}
+
+nav ul {
+	padding: 5px 10px 5px;
+	font-family: 'Lato', sans-serif;
+	font-size: 1em;
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	background-color: black;
+	color: #F8F8FF;
+}
+
+nav li {
+	display: inline-block;
+	letter-spacing: 0.09em;
+	color: white;
+}
+
+.footer {
+  height: 30px;
+}
+
+h1 {
+	padding-top: 40px;
+}
