--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome to Bike Berlin</h1>
-<h2>Your source for used bikes in Berlin</h2>
+<h1>Welcome to Boat Berlin</h1>
+<h2>Your source for used boats in Berlin</h2>
+<%= image_tag("Carousel2.jpg", class: "img-responsive") %>
